deploy/openshift/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lca-api-service
  namespace: legacy-code-archaeology-dev
spec:
  selector:
    app: lca-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
