deploy/openshift/base/neo4j-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lca-neo4j-service
  namespace: legacy-code-archaeology-dev
spec:
  selector:
    app: lca-neo4j
  ports:
    - name: http
      protocol: TCP
      port: 7474
      targetPort: 7474
    - name: bolt
      protocol: TCP
      port: 7687
      targetPort: 7687
