deploy/openshift/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lca-postgres-service
  namespace: legacy-code-archaeology-dev
spec:
  selector:
    app: lca-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
